--- a/Packages/SublimeTmpl/templates/html.tmpl
+++ b/Packages/SublimeTmpl/templates/html.tmpl
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width  initial-scale=1.0, user-scalable=no, user-scalable=0">
 <title>${1:Examples}</title>
 ${2:<meta name="description" content="$3">
 <meta name="keywords" content="$4">
